refactor: trim을 strip으로 변경하고 isEmpty를 isBlank로 개선
- trim → strip: 유니코드 공백까지 제거
- strip().isEmpty() → isBlank(): 더 간결하고 명확한 공백 검증

모든 유니코드 공백 문자를 올바르게 처리